--- a/.github/workflows/auto-update-changelog.yml
+++ b/.github/workflows/auto-update-changelog.yml
@@ -66,7 +66,7 @@ jobs:
           # Setup Claude API
           from anthropic import Anthropic
           claude = Anthropic(api_key=os.environ['CLAUDE_API_KEY'])
-          model_name = os.environ.get('CLAUDE_MODEL', 'claude-3-7-sonnet-20250219')  # Default to latest Opus model
+          model_name = os.environ.get('CLAUDE_MODEL', 'claude-3-7-sonnet-20250219')  # Default to Claude 3.7 Sonnet
 
           # Get current date in the required format
           current_date = datetime.now().strftime("%B %d, %Y")
@@ -100,7 +100,7 @@ jobs:
                   if len(entries) >= 2:
                       existing_format += "\n" + entries[1]
           
-          # Prepare prompt for Gemini
+          # Prepare prompt for Claude
           prompt = f"""
           Based on these commit messages:
 
@@ -156,6 +156,10 @@ jobs:
           with open('CHANGELOG.md', 'w') as f:
               f.write(updated_changelog)
 
+          # Save the changelog content to a file so it can be used in PR description
+          with open('changelog_snippet.txt', 'w') as f:
+              f.write(changelog_content)
+
           print("::set-output name=changelog_updated::true")
           print(f"Successfully updated CHANGELOG.md with {version} changes")
           EOF
@@ -166,7 +170,23 @@ jobs:
           CLAUDE_MODEL: ${{ secrets.CLAUDE_MODEL || 'claude-3-7-sonnet-20250219' }}
           VERSION: ${{ steps.extract_version.outputs.VERSION }}
 
+      # Menambahkan langkah untuk mendapatkan isi snippet changelog
+      - name: Get Changelog Snippet
+        id: get_snippet
+        if: steps.generate_changelog.outputs.changelog_updated == 'true'
+        run: echo "CHANGELOG_SNIPPET=$(cat changelog_snippet.txt)" >> $GITHUB_OUTPUT
+
+      # Tambahkan langkah cleanup untuk menghapus file-file sementara
+      - name: Cleanup temporary files
+        if: always()
+        run: |
+          rm -f commits.txt
+          rm -f update_changelog.py
+          rm -f changelog_snippet.txt
+          echo "Cleaned up temporary files"
+
       - name: Create PR with changelog update
+        if: steps.generate_changelog.outputs.changelog_updated == 'true'
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: "docs: update CHANGELOG.md for ${{ steps.extract_version.outputs.VERSION }}"
@@ -175,6 +195,11 @@ jobs:
             This PR automatically updates the CHANGELOG.md file based on recent commits.
             
             The changelog has been generated using Claude AI to analyze commit messages and categorize changes appropriately.
+            
+            ### Changes:
+            ```markdown
+            ${{ steps.get_snippet.outputs.CHANGELOG_SNIPPET }}
+            ```
             
             Please review the changes and merge if they look good.
           branch: auto-update-changelog
